--- a/index.html
+++ b/index.html
@@ -3,7 +3,128 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RunRelay — We Get Things Done</title>
+<title>RunRelay — Real-Time Travel Execution for Banks & Platforms | Concierge API</title>
+<meta name="description" content="RunRelay handles flights, hotels, payments, and logistics end-to-end with human concierge 24/7. White-label travel platform and API for banks, fintechs, and AI agents. Live with paying clients.">
+<meta name="keywords" content="travel API, concierge API, white label travel platform, bank travel solution, travel execution, GDS NDC, hotel booking API, flight booking API, AI agent travel, fintech travel, airport lounge access, eSIM travel, travel insurance API, corporate travel management, lifestyle banking platform, embedded travel, travel as a service, TaaS, concierge as a service, travel orchestration, travel middleware">
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
+<meta name="author" content="RunRelay">
+<meta name="publisher" content="RunRelay">
+<link rel="canonical" href="https://runrelay.io">
+
+<!-- Performance: preconnect to Google Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<!-- Theme & Mobile -->
+<meta name="theme-color" content="#0A0A0F">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="RunRelay">
+<meta name="application-name" content="RunRelay">
+<meta name="msapplication-TileColor" content="#00E59A">
+
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://runrelay.io">
+<meta property="og:title" content="RunRelay — We Don't Give You Tools. We Get Things Done.">
+<meta property="og:description" content="Real-time travel execution with human concierge 24/7. Flights, hotels, payments, logistics — handled end-to-end for banks, platforms, and AI agents. White-label in 2 weeks.">
+<meta property="og:site_name" content="RunRelay">
+<meta property="og:locale" content="en_US">
+<meta property="og:image" content="https://runrelay.io/og-image.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="RunRelay — Real-time travel execution for banks and platforms">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="RunRelay — Real-Time Travel Execution for Banks & Platforms">
+<meta name="twitter:description" content="Human concierge + API. Flights, hotels, payments handled end-to-end. White-label in 2 weeks. Live with paying clients.">
+<meta name="twitter:image" content="https://runrelay.io/og-image.png">
+<meta name="twitter:image:alt" content="RunRelay — Real-time travel execution for banks and platforms">
+
+<!-- Additional SEO signals -->
+<meta name="geo.region" content="AE-DU">
+<meta name="geo.placename" content="Dubai">
+
+<!-- Favicon -->
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><rect width='32' height='32' rx='6' fill='%230A0A0F'/><text x='4' y='24' font-size='22' font-family='sans-serif' font-weight='bold' fill='%2300E59A'>R</text></svg>">
+<link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'><rect width='180' height='180' rx='36' fill='%230A0A0F'/><text x='30' y='135' font-size='120' font-family='sans-serif' font-weight='bold' fill='%2300E59A'>R</text></svg>">
+
+<!-- Structured Data: Organization -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "RunRelay",
+  "url": "https://runrelay.io",
+  "email": "info@runrelay.io",
+  "description": "Real-time travel execution platform with human concierge 24/7 for banks, fintechs, and AI agents.",
+  "areaServed": "Worldwide",
+  "knowsAbout": ["Travel API", "Concierge Services", "White Label Travel Platform", "Banking Technology", "Travel Insurance", "Flight Booking", "Hotel Booking"]
+}
+</script>
+
+<!-- Structured Data: SoftwareApplication -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "RunRelay API",
+  "url": "https://runrelay.io",
+  "applicationCategory": "BusinessApplication",
+  "applicationSubCategory": "Travel Technology",
+  "description": "REST API for real-time travel booking, concierge services, and white-label travel platforms. Flights, hotels, lounges, eSIM, insurance.",
+  "operatingSystem": "Web",
+  "offers": {
+    "@type": "Offer",
+    "category": "API Access",
+    "availability": "https://schema.org/InStock"
+  },
+  "featureList": "GDS/NDC Flight Search, Hotel Booking, Airport Lounges, eSIM, Travel Insurance, 24/7 Human Concierge, White Label Platform, Intent Signals"
+}
+</script>
+
+<!-- Structured Data: FAQPage (helps rich snippets) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "What is RunRelay?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "RunRelay is a real-time travel execution platform that handles flights, hotels, payments, and logistics end-to-end with human concierge support 24/7. It serves banks, fintechs, and AI agents via API and white-label solutions."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How fast can a bank launch a white-label travel platform with RunRelay?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "RunRelay offers a turnkey white-label lifestyle platform that any bank can launch in as little as 2 weeks, with zero development effort required."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How does RunRelay differ from booking platforms?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Unlike self-service booking platforms, RunRelay provides real-time execution with human concierge support 24/7. When things go wrong — like a cancelled flight — RunRelay resolves it in minutes, not hours."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What services does RunRelay aggregate?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "RunRelay aggregates flights via GDS/NDC, hotels, airport lounges, eSIM data plans, travel insurance, ground transfers, restaurant reservations, events and tickets, and visa and document services."
+      }
+    }
+  ]
+}
+</script>
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;1,9..40,400&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
 <style>
 /* ========== MODAL FORM ========== */
@@ -750,7 +871,14 @@ footer {
 </head>
 <body>
 
+<noscript>
+  <div style="background:#00E59A;color:#0A0A0F;text-align:center;padding:16px;font-family:sans-serif;font-weight:600;">
+    RunRelay — Real-time travel execution for banks, platforms, and AI agents. Contact us at info@runrelay.io
+  </div>
+</noscript>
+
 <!-- ==================== NAV ==================== -->
+<header>
 <nav>
   <div class="nav-inner">
     <span class="nav-logo" style="cursor:pointer;" onclick="window.scrollTo({top:0,behavior:'smooth'})">Run<span>Relay</span></span>
@@ -772,6 +900,9 @@ footer {
     </button>
   </div>
 </nav>
+</header>
+
+<main>
 
 <!-- ==================== HERO ==================== -->
 <section class="hero">
@@ -1350,6 +1481,8 @@ footer {
     </div>
   </div>
 </section>
+
+</main>
 
 <!-- ==================== FOOTER ==================== -->
 <footer>
