--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ nav {
   height: 64px;
 }
 .nav-logo {
-  font-size: 20px; font-weight: 700; letter-spacing: -0.5px;
-  display: flex; align-items: center; gap: 8px;
+  font-size: 22px; font-weight: 800; letter-spacing: -1px;
+  color: var(--text-primary);
 }
 .nav-logo span { color: var(--accent); }
 .nav-links { display: flex; align-items: center; gap: 32px; }
@@ -828,7 +828,7 @@ footer {
   margin-bottom: 40px;
 }
 .footer-brand .footer-logo {
-  font-size: 20px; font-weight: 700; margin-bottom: 12px;
+  font-size: 22px; font-weight: 800; margin-bottom: 12px; letter-spacing: -1px;
 }
 .footer-brand .footer-logo span { color: var(--accent); }
 .footer-brand p { font-size: 14px; color: var(--text-secondary); max-width: 280px; line-height: 1.6; }
